deployment/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sidecar-injector-webhook-deployment
  labels:
    app: sidecar-injector
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sidecar-injector
    spec:
      serviceAccountName: sidecar-injector
      containers:
        - name: sidecar-injector
          image: lilinghai/sidecar-injector:v1
          imagePullPolicy: IfNotPresent
          args:
            - -tlsCertFile=/etc/webhook/certs/cert.pem
            - -tlsKeyFile=/etc/webhook/certs/key.pem
            - -alsologtostderr
            - -v=3
            - 2>&1
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/webhook/certs
              readOnly: true
        - name: proxy
          image: luksa/kubectl-proxy:1.6.2
      volumes:
        - name: webhook-certs
          secret:
            secretName: sidecar-injector-webhook-certs
